[metadata]
name = django-health-check
author = Kristian Ollegaard
author_email = kristian@oellegaard.com
description = Run checks on services like databases, queue servers, celery processes, etc.
long_description = file: README.rst
url = https://github.com/KristianOellegaard/django-health-check
license = BSD License
license_file = LICENSE
classifier =
  Development Status :: 5 - Production/Stable
  Framework :: Django
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Quality Assurance
  Topic :: System :: Logging
  Topic :: System :: Monitoring
  Topic :: Utilities
keywords =
  django
  postgresql

[options]
include_package_data = True
packages = health_check
install_requires =
    django>=1.11
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    mock
    pytest
    pytest-cov
    pytest-django
    celery
    redis

[bdist_wheel]
universal = 1

[bdist_rpm]
requires =
    python-django-appconf >= 2.0
    python-django-appconf >= 0.6

[aliases]
test = pytest

[tool:pytest]
norecursedirs=venv env .eggs
DJANGO_SETTINGS_MODULE=tests.testapp.settings
addopts = --tb=short -rxs

[flake8]
max-line-length = 119
max-complexity = 10
statistics = true
show-source = true
exclude = */migrations/*,docs/*,env/*,.tox/*,.eggs/*

[pydocstyle]
add-ignore = D1
match-dir = (?!tests|env|.eggs|\.).*

[coverage:run]
source = .
omit =
  */migrations/*
  */tests/*
  */test_*.py
  .tox
  .eggs

[coverage:report]
ignore_errors = True
show_missing = True

[build_sphinx]
source_dir = docs
build_dir = docs/_build
warning-is-error = 1

[tox:tox]
envlist = py{36,37}-dj{111,20,master},qa

[testenv]
setenv=
    PYTHONPATH = {toxinidir}:$PYTHONPATH
deps=
    dj111: https://github.com/django/django/archive/stable/1.11.x.tar.gz#egg=django
    dj22: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
    djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
commands=
    python setup.py test

[testenv:docs]
commands=
    python setup.py build_sphinx
