[metadata]
name = django-health-check
author = Kristian Ollegaard
author_email = kristian@oellegaard.com
description = Run checks on services like databases, queue servers, celery processes, etc.
long_description = file: README.rst
url = https://github.com/KristianOellegaard/django-health-check
license = MIT License
license_file = LICENSE
classifier =
  Development Status :: 5 - Production/Stable
  Framework :: Django
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Quality Assurance
  Topic :: System :: Logging
  Topic :: System :: Monitoring
  Topic :: Utilities
keywords =
  django
  postgresql

[options]
include_package_data = True
packages = health_check
install_requires =
    django>=1.11
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    mock
    pytest
    pytest-cov
    pytest-django
    celery
    redis

[bdist_wheel]
universal = 1

[bdist_rpm]
requires =
    python-django-appconf >= 2.0
    python-django-appconf >= 0.6

[aliases]
test = pytest

[tool:pytest]
norecursedirs=venv env .eggs
DJANGO_SETTINGS_MODULE=tests.testapp.settings
addopts =
    --tb=short
    -rxs
    --cov=health_check
    --cov-report=term
    --cov-report=xml

[flake8]
max-line-length = 119
max-complexity = 10
statistics = true
show-source = true
exclude = */migrations/*,docs/*,env/*,.eggs/*

[pydocstyle]
add-ignore = D1
match-dir = (?!tests|env|.eggs|\.).*

[coverage:run]
branch = True
omit =
  */migrations/*
  */tests/*
  */test_*.py
  .eggs/*

[coverage:report]
ignore_errors = True
show_missing = True
skip_covered = True
sort = Cover

[build_sphinx]
source_dir = docs
build_dir = docs/_build
warning-is-error = 1
