[metadata]
name = django-health-check
author = Kristian Ollegaard
author_email = kristian@oellegaard.com
description = Run checks on services like databases, queue servers, celery processes, etc.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/revsys/django-health-check
license = MIT License
license_file = LICENSE
classifier =
  Development Status :: 5 - Production/Stable
  Framework :: Django
  Framework :: Django :: 2.2
  Framework :: Django :: 3.1
  Framework :: Django :: 3.2
  Framework :: Django :: 4.0
  Framework :: Django :: 4.1
  Framework :: Django :: 4.2
  Framework :: Django :: 5.0
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Software Development :: Quality Assurance
  Topic :: System :: Logging
  Topic :: System :: Monitoring
  Topic :: Utilities
keywords =
  django
  postgresql

[options]
python_requires = >=3.8
include_package_data = True
packages = health_check
install_requires =
    django>=2.2
setup_requires =
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-django
    celery
    redis
    django-storages
    boto3
docs =
    sphinx

[bdist_wheel]
universal = 1

[bdist_rpm]
requires =
    python-django-appconf >= 2.0
    python-django-appconf >= 0.6

[aliases]
test = pytest

[tool:pytest]
norecursedirs=venv env .eggs
DJANGO_SETTINGS_MODULE=tests.testapp.settings
addopts =
    --tb=short
    -rxs
    --cov=health_check

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
ignore = E203, E501, W503, E731

[isort]
atomic = true
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
known_first_party = health_check, tests
default_section = THIRDPARTY
combine_as_imports = true

[pydocstyle]
add-ignore = D1
match-dir = (?!tests|env|.eggs|\.).*

[coverage:run]
branch = True
omit =
  */migrations/*
  */tests/*
  */test_*.py
  .eggs/*

[coverage:report]
ignore_errors = True
show_missing = True
skip_covered = True
sort = Cover
